report - evoked potentials

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -42,7 +42,7 @@
     "- Although the paper says the data was sampled at 250 Hz, according to the dataset the sampling rate is 1000 Hz and we have proceeded assuming this 1kHz value.\n",
     "- The paper states that the 10-20 electrode montage was used.\n",
     "- Due to participants' wishes, only part of the data was shared by the researchers - that collected at the Oxford testing site. This means that we have fewer subjects to analyse, and also that the notch filtering required will be only at one frequency (50 Hz at Oxford).\n",
-    "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing.\n",
+    "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing. We have also filled in these missing events and added them to this project folder as the file 'sub-XX_task-casinos_events_Restored.json'. \n",
     "- Event name format: Each event name consists of four characters, with spaces used for padding (e.g. ```S  6, S 16```). However in some forms of output (e.g. in jupyter notebooks that we used while initially exploring the data) it can show up as three characters (```S 6, S 16```) and in the json file mentioned above the names are also slightly different (```S6, S16```). "
    ]
   },
@@ -229,7 +229,11 @@
     "\n",
     "#### Evoked potentials\n",
     "\n",
-    "(TODO) - conditions and contrasts\n"
+    "- After the data is cleaned, we can get evoked data from the pipeline by setting the 'contrasts' value to specify the pairs of conditions between which we want to calculate differences. Here, we contrast feedback-locked epochs for win vs loss results for each of the task-cue combinations. The pipeline generates the evoked potentials for each subject and for all the individual conditions and contrasts we specify, when we run the appropriate pipeline step 'sensor/_01_make_evoked'.\n",
+    "- mne-bids-pipeline does have a configuration parameter ('analyze_channels') to carry out this analysis only for a subset of channels; however, when we tried to restrict it to only FCz like the researchers did in the original paper, we ran into an error somewhere in the package internals.\n",
+    "- So, since the package is still in active development, we wrote some utility code to run the further averaging and plotting ourselves.\n",
+    "- We take the pipeline output of the 'evoked' step and run our utility function (TODO name the function) to average the conditions over all the subjects. If we want to analyse a certain set of subjects, we can update sub_list in the utility function to contain only the subjects that we want (in future we could also pass this as a parameter instead, to make it more flexible). Similarly, we can select specific (or all) channels as well.\n",
+    "- We can plot the condition waveforms (\"win/loss waveforms\") and contrast waveforms (\"difference waves\") by passing the corresponding evoked-names to the plotting function. \n"
    ]
   },
   {
@@ -271,7 +275,7 @@
     "These are the steps to run the analysis from start to end:\n",
     "\n",
     "1. **Download the dataset and extract it** to a folder of your choice. For us, the main project folder was \"EEG2324Brownie\" and the dataset in the folder 'Dataset/ds004147' inside it.\n",
-    "2. **Removing participants, invalid trials, and learning trials** from the dataset - run the script __ (TODO name) from ```utils.py```. This creates a new folder 'Dataset/ds004147-filtered/', which is the folder to use for the actual analysis.  \n",
+    "2. **Removing participants, invalid trials, and learning trials** from the dataset - run the functions drop_learning_nonlearner_invalid_trials and drop_trials_events from ```utils.py``` as explained above. This creates a new folder 'Dataset/ds004147-filtered/', which is the folder to use for the actual analysis.  \n",
     "3. **Initialisation**: In the config file ```brownie-config.py```, set the values of parameters like study_name (main project folder - for us, 'EEG2324Brownie'), bids_root (should point to the new 'ds004147-filtered' folder), subjects (if you want to analyse only a few subjects vs. all), etc. (TODO check full list after cleaning up config file)\n",
     "4. **Filtering and ICA step**:\n",
     "    - Set ```ica_train_step = True``` in the configuration file\n",
