report - ica, channels
extended ica explanation, channels for individual subjects description

--- a/report.ipynb
+++ b/report.ipynb
@@ -119,7 +119,13 @@
     "\n",
     "  However, after looking at the data post cleaning it did not seem very highly influenced by these artifacts - maybe after some deeper investigation it could be possible to remove them anyway, or if not then discard the subject. The paper states that only one participant had data with too many artifacts to be usable, so we believe they also used the data from these subjects after cleaning.\n",
     "  \n",
-    "- The remaining subjects had no channels that we found to be obviously bad throughout. In general, Fp1 and Fp2 seemed to have the highest effects from eyeblinks, but since we set those as virtual EOG electrodes in the config file for the analysis, we believe those effects are also eliminated through the ICA training."
+    "- The remaining subjects had no channels that we found to be obviously bad throughout. \n",
+    "Across the board, all participants showed usable channel recordings, with none of them too noisy to be usable or too flat to be cautious about the recording quality. \n",
+    "In general, Fp1 and Fp2 seemed to have the highest effects from eyeblinks, but since we set those as virtual EOG electrodes in the config file for the analysis, we believe those effects are also eliminated through the ICA training.\n",
+    "\n",
+    "- Subjects 29 and 30 subjectively had the most noise in their channels overall, but we decided they are still within the acceptable range.\n",
+    "\n",
+    "- For subject 38, channels FC1, FC2, F3, F4 and FCz were comparably flat, but they still looked usable and not like a failed recording of sensors or something like that, we found."
    ]
   },
   {
@@ -219,7 +225,9 @@
     "\n",
     "#### ICA for artifact removal:\n",
     "\n",
-    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP\u0000 analysis (-0.2 to +06. second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be explicitly run after the ICA steps. \n",
+    "Since the original paper uses ICA for artifact removal, we decided to do the same. Not only because it would probably lead to higher comparability of results, but also because it seems to be kind of agreed on in the community (from what we could find in different online forums) that ICA works better for EEG data than SSP does, as the latter might remove too much of the original signal.\n",
+    "\n",
+    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP analysis (-0.2 to +06. second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be explicitly run after the ICA steps. \n",
     "\n",
     "For our pipeline, we have a variable ```ica_train_step``` (default False) which should be set to True when performing the ICA and back to False after the ICA training is done. This will cause the relevant settings like event names (\"conditions\") and epoch length to be set accordingly.\n",
     "\n",
@@ -245,9 +253,9 @@
     "To find out which independent components in our dataset are bad, we first let the MNE BIDS pipeline run and let it do the automatic detection of potential EOG artifacts. We then manually analyzed the generated reports for each subject to see whether or not we agree with the automatic detection and made corrections if we felt they were needed.\n",
     "More often than not, we made some modifications to the selection, which was done by editing the ```./Dataset/ds004147-filtered/derivatives/sub-XX/sub-XX_task-casinos_proc-ica_components.tsv``` file and setting the status of each independent component to \"good\" or \"bad\".\n",
     "    \n",
-    "To decide which components were bad, we found it helpful to practise with the interactive tutorial provided by [This Website](https://labeling.ucsd.edu/tutorial/practice), where one can just try and see whether their suspicion is correct or not.\n",
+    "To decide which components were bad, we found it helpful to practise with the interactive tutorial provided by [this website](https://labeling.ucsd.edu/tutorial/practice), where one can just try and see whether their suspicion is correct or not.\n",
     "    \n",
-    "As an example, here is the autotmatic output of the pipeline for subject 27:\n",
+    "As an example, here is the automatic output of the pipeline for subject 27:\n",
     "    \n",
     "![](./Report_Media/27icabefore.PNG \"ICA sub27\")\n",
     "    \n",
@@ -256,7 +264,7 @@
     "    \n",
     "![](./Report_Media/27icabeforeRB.PNG \"ICA sub27\")\n",
     "    \n",
-    "Through our practise with the website mentioned above and our gut feeling, we then proceeded to check if we agree with the pipelines decision.\n",
+    "Through our practise with the website mentioned above and our own suspicions, we then proceeded to check if we agree with the pipelines decision. \n",
     "In the case of subject 27, we for example thought that ICA001, ICA003 and ICA005 might contain some useful information and should be kept, while ICA004, ICA006, ICA007 and ICA008 are rather bad, so we updated the .tsv file, as mentioned above.\n",
     "    \n",
     "After we completed this process for all subjects, we ran the rest of the pipeline as explained below, which then generated a new report with the independent components we marked as \"bad\" and a new comparison between the uncleaned and cleaned signals, this time on a different epoch, as in our case the ICA is trained on other epochs than the ones it is applied to.\n",
