plotting evokeds - util function

--- a/report.ipynb
+++ b/report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "We attempted to replicate the processing pipeline of the paper - Task-level Value Affects Trial-level Reward Processing (Hassall, Hunt, and Holroyd 2021). The researchers carried out their analysis in MATLAB 2022a using the EEGLab library, while we have used the python package ```mne-bids-pipeline``` that allows us to use py-mne functions in an easier way. The researchers provided a subset of their data, which we used in order to run our own pipeline. Since we did not have all the data from the original study, we predicted the results that we got would probably deviate from those in the paper, but we concentrated on doing the same processing steps as described in the paper."
+    "We attempted to replicate the processing pipeline of the paper - Task-level Value Affects Trial-level Reward Processing (Hassall, Hunt, and Holroyd 2021). The researchers carried out their analysis in MATLAB 2022a using the EEGLab library, while we have used the python package ```mne-bids-pipeline``` that allows us to use py-mne functions in an easier way. The researchers provided a subset of their data, which we used in order to run our own pipeline. Since we did not have all the data from the original study, we predicted the results that we got would probably not be exactly like those in the paper, but we concentrated on doing the same processing steps as described in the paper."
    ]
   },
   {
@@ -131,7 +131,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Removing Participants and Trials from the Analysis.\n",
@@ -150,7 +153,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Filter the first n=4 trials for every slot in every casino for every participant\n",
@@ -185,7 +191,7 @@
     "\n",
     "![invalid-trials.png](attachment:fda82269-3207-4fcf-a2ed-179138ac4189.png)\n",
     "\n",
-    "We noticed that subject 29 had nearly 25% of the trials incorrect and subject 32 nearly 15% incorrect, however we have included the subject in the analysis since they still got the majority of trials right. The rest of the subjects all had more than 90% of the trials correctly answered."
+    "We noticed that subject 29 had nearly 25% of the trials incorrect and subject 32 nearly 15% incorrect, however we have included these subjects in the analysis since they still got the majority of trials right. The rest of the subjects all had more than 90% of the trials correctly answered."
    ]
   },
   {
@@ -227,7 +233,7 @@
     "\n",
     "Since the original paper uses ICA for artifact removal, we decided to do the same. Not only because it would probably lead to higher comparability of results, but also because it seems to be kind of agreed on in the community (from what we could find in different online forums) that ICA works better for EEG data than SSP does, as the latter might remove too much of the original signal.\n",
     "\n",
-    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP analysis (-0.2 to +06. second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be explicitly run after the ICA steps. \n",
+    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP analysis (-0.2 to +0.6 second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be explicitly run after the ICA steps. \n",
     "\n",
     "For our pipeline, we have a variable ```ica_train_step``` (default False) which should be set to True when performing the ICA and back to False after the ICA training is done. This will cause the relevant settings like event names (\"conditions\") and epoch length to be set accordingly.\n",
     "\n",
@@ -241,7 +247,57 @@
     "- mne-bids-pipeline does have a configuration parameter ('analyze_channels') to carry out this analysis only for a subset of channels; however, when we tried to restrict it to only FCz like the researchers did in the original paper, we ran into an error somewhere in the package internals.\n",
     "- So, since the package is still in active development, we wrote some utility code to run the further averaging and plotting ourselves.\n",
     "- We take the pipeline output of the 'evoked' step and run our utility function (TODO name the function) to average the conditions over all the subjects. If we want to analyse a certain set of subjects, we can update sub_list in the utility function to contain only the subjects that we want (in future we could also pass this as a parameter instead, to make it more flexible). Similarly, we can select specific (or all) channels as well.\n",
-    "- We can plot the condition waveforms (\"win/loss waveforms\") and contrast waveforms (\"difference waves\") by passing the corresponding evoked-names to the plotting function. \n"
+    "- We can plot the condition waveforms (\"win/loss waveforms\") and contrast waveforms (\"difference waves\") by passing the corresponding condition/contrast names to the plotting function.\n",
+    "```\n",
+    "from utils import *\n",
+    "%matplotlib qt\n",
+    "\n",
+    "fig_conditions = plot_avg_evokeds(\n",
+    "    sub_list=[\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"],\n",
+    "    cond_list=[ \n",
+    "        'Win LL',\n",
+    "        'Loss LL',\n",
+    "        'Win ML',\n",
+    "        'Loss ML',\n",
+    "        'Win MH',\n",
+    "        'Loss MH',\n",
+    "        'Win HH',\n",
+    "        'Loss HH'\n",
+    "    ],\n",
+    "    colors={'Win LL':'r',\n",
+    "         'Win ML':'r',\n",
+    "         'Win MH':'r',\n",
+    "         'Win HH':'r',\n",
+    "         'Loss LL':'b',\n",
+    "         'Loss ML':'b',\n",
+    "         'Loss MH':'b',\n",
+    "         'Loss HH':'b'},\n",
+    "    linestyles={'Win LL':'solid',\n",
+    "         'Win ML':'dashed',\n",
+    "         'Win MH':'dashdot',\n",
+    "         'Win HH':'dotted',\n",
+    "         'Loss LL':'solid',\n",
+    "         'Loss ML':'dashed',\n",
+    "         'Loss MH':'dashdot',\n",
+    "         'Loss HH':'dotted'}\n",
+    "    )\n",
+    "\n",
+    "fig_contrasts = plot_avg_evokeds(\n",
+    "    sub_list=[\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"],\n",
+    "    cond_list=[ \n",
+    "        'Win LL',\n",
+    "        'Loss LL',\n",
+    "        'Win ML',\n",
+    "        'Loss ML',\n",
+    "        'Win MH',\n",
+    "        'Loss MH',\n",
+    "        'Win HH',\n",
+    "        'Loss HH'\n",
+    "    ],\n",
+    "    colors=['#EE82EE','#EE82EE','#a020f0','#a020f0'],\n",
+    "    linestyles=['solid','dashed','dotted','dashdot']\n",
+    "    )\n",
+    "``` \n"
    ]
   },
   {
@@ -298,7 +354,7 @@
     "8. **Peak-to-Peak rejection**: run ```mne_bids_pipeline --config=./brownie-config.py --steps=preprocessing/_09_ptp_reject```\n",
     "9. **Evoked Potentials**:\n",
     "   - run ```mne_bids_pipeline --config=./brownie-config.py --steps=sensor/_01_make_evoked```\n",
-    "   - run (TODO function name/ create cell to run this) to load and plot the evoked data. If you want to view only a subset of channels (e.g. only FCz), change the list in 'picks' before plotting."
+    "   - run the utility function plot_avg_evokeds() as shown above, to load and plot the evoked data. If you want to view only a subset of channels (e.g. only FCz), change the list in 'picks' before plotting - by default if multiple channels are selected they will be averaged. You can also select which subjects to plot by changing the list passed to the function."
    ]
   },
   {
@@ -313,7 +369,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "#### Setup\n",
