--- a/m_snippets.ipynb
+++ b/m_snippets.ipynb
@@ -171,6 +171,40 @@
      "text": [
       "Identifying common channels ...\n",
       "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "Identifying common channels ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Max\\Documents\\Uni\\GitHub\\EEG2324Brownie\\utils.py:504: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
+      "  return mne.viz.plot_compare_evokeds(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "Identifying common channels ...\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
       "combining channels using \"mean\"\n",
       "combining channels using \"mean\"\n"
      ]
@@ -179,19 +213,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/media/mnk/Delta/AAUniStuttgart/A Sem 3/EEG/EEG2324Brownie/utils.py:504: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
+      "C:\\Users\\Max\\Documents\\Uni\\GitHub\\EEG2324Brownie\\utils.py:504: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
       "  return mne.viz.plot_compare_evokeds(\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "plot_avg_evokeds() missing 2 required positional arguments: 'colors' and 'linestyles'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 65\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# fig_conditions = plot_avg_evokeds(\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#     sub_list=[\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"],\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#     cond_list=[ \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;66;03m#     linestyles=['solid','dashed','dotted','dashdot']\u001b[39;00m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;66;03m#     )\u001b[39;00m\n\u001b[1;32m     50\u001b[0m fig_conditions \u001b[38;5;241m=\u001b[39m plot_avg_evokeds(\n\u001b[1;32m     51\u001b[0m     bids_root \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataset/ds004147-filtered\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     52\u001b[0m     sub_list\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m28\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m29\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m30\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m31\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m32\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m33\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m34\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m35\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m36\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m37\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m38\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     62\u001b[0m                }\n\u001b[1;32m     63\u001b[0m     )\n\u001b[0;32m---> 65\u001b[0m fig_conditions \u001b[38;5;241m=\u001b[39m \u001b[43mplot_avg_evokeds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbids_root\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDataset/ds004147-filtered\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     67\u001b[0m \u001b[43m    \u001b[49m\u001b[43msub_list\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m29\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m30\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m31\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m32\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m33\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m34\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m35\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m36\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m37\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m38\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     68\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     69\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mStimulus/S  6\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     70\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mStimulus/S  7\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m     71\u001b[0m \u001b[43m    \u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# colors={'Stimulus/S  6':'r',\u001b[39;49;00m\n\u001b[1;32m     73\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#      'Stimulus/S  7':'b'\u001b[39;49;00m\n\u001b[1;32m     74\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#        },\u001b[39;49;00m\n\u001b[1;32m     75\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# linestyles={'Stimulus/S  6':'solid',\u001b[39;49;00m\n\u001b[1;32m     76\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#      'Stimulus/S  7':'dotted'\u001b[39;49;00m\n\u001b[1;32m     77\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#            }\u001b[39;49;00m\n\u001b[1;32m     78\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: plot_avg_evokeds() missing 2 required positional arguments: 'colors' and 'linestyles'"
      ]
     }
    ],
@@ -200,6 +223,7 @@
     "%matplotlib qt\n",
     "\n",
     "fig_conditions = plot_avg_evokeds(\n",
+    "    bids_root = \"Dataset/ds004147-filtered\",\n",
     "    sub_list=[\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"],\n",
     "    cond_list=[ \n",
     "        'Win LL',\n",
@@ -233,14 +257,10 @@
     "    bids_root = \"Dataset/ds004147-filtered\",\n",
     "    sub_list=[\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"],\n",
     "    cond_list=[ \n",
-    "        'Win LL',\n",
-    "        'Loss LL',\n",
-    "        'Win ML',\n",
-    "        'Loss ML',\n",
-    "        'Win MH',\n",
-    "        'Loss MH',\n",
-    "        'Win HH',\n",
-    "        'Loss HH'\n",
+    "        'Win LL - Loss LL',\n",
+    "        'Win ML - Loss ML',\n",
+    "        'Win MH - Loss MH',\n",
+    "        'Win HH - Loss HH'\n",
     "    ],\n",
     "    colors=['#EE82EE','#EE82EE','#a020f0','#a020f0'],\n",
     "    linestyles=['solid','dashed','dotted','dashdot']\n",
@@ -301,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
