--- a/report.ipynb
+++ b/report.ipynb
@@ -6,22 +6,24 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "We attempted to replicate the processing pipeline of the paper - Task-level Value Affects Trial-level Reward Processing (Hassall, Hunt, and Holroyd 2021). The researchers carried out their analysis in MATLAB 2022a using the EEGLab library, while we have used the python package ```mne-bids-pipeline``` that allows us to use py-mne functions in an easier way. The researchers provided a subset of their data, which we used in order to run our own pipeline. Since we did not have all the data from the original study, we predicted the results that we got would probably not be exactly like those in the paper, but we concentrated on doing the same processing steps as described in the paper."
+    "Team Brownie: Kevin Van Le (3726909), Maanik Marathe (3644269), Maximilian Weiß (3165858)\n",
+    "\n",
+    "We attempted to replicate the processing pipeline of the paper - \"Task-level Value Affects Trial-level Reward Processing\" (Hassall, Hunt, and Holroyd 2021). The researchers carried out their analysis in MATLAB 2022a using the EEGLab library, while we have used the python package ```mne-bids-pipeline``` that allows us to use py-mne functions in an easier way. The researchers provided a subset of their data, which we used in order to run our own pipeline. Since we did not have all the data from the original study, we predicted the results that we got would probably not be exactly like those in the paper, but we concentrated on doing the same processing steps as described in the paper."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The original paper explained in brief\n",
+    "## The original paper explained in brief\n",
     "\n",
     "#### Experiment: \n",
     "- Participants were presented with **slot machines** (\"trials\") where they had to select one of two arms to pull. If the participant selected the correct arm on the slot machine, they would **\"win\"** at the machine and gain \\\\$0.03, while if they selected the wrong arm, they would **\"lose\"** the trial i.e. gain \\\\$0.00.\n",
     "- The **win/loss feedback** for each slot machine was shown to them after they selected an arm. Their goal was to **win as much money as possible**.\n",
-    "- Each slot machine was preceded by a **cue** (coloured shape) shown to the participant. The slot machines were divided into three sets or **casinos** (\"tasks\").\n",
+    "- Each slot machine was preceded by a **cue** (coloured shape) shown to the participant. The slot machines were divided into three sets or **casinos** (\"tasks\") which were presented to participants in random order.\n",
     "- The different cues corresponded to **different types of slot machines**. Some machines, called **\"low-value\" machines**, had a 50% win probablility on both arms, while others called **\"high-value machines\"** had an 80% win probability on one arm and 20% on the other.\n",
     "- For high-value machines, if the participant selected the 80%-arm it was considered a **\"correct\"** response. There was no \"correct\" response for a low-value machine.\n",
-    "- The **participants were not informed** of these differences. The **win amount was kept constant** across all slot machines.\n",
+    "- The **participants were not informed** of these differences. The **win amount per trial was kept constant** across all slot machines.\n",
     "- The **three casinos had a mix of high- and low- value machines** - one each of \"high-value\" and \"low-value\" task/casino containing only high-/low- value slot machines respectively, and a \"mid-value\" task containing equal numbers of both.\n",
     "- Each of the 6 machine types was presented 24 times in random order (144 trials per task).\n",
     "\n",
@@ -33,17 +35,17 @@
     "- For each task, the first ten trials for each cue type were excluded, since it was assumed that the participants would still be learning the cues.\n",
     "\n",
     "#### Analysis:\n",
-    "- The researchers looked into \"Reward Positivity\" (RewP), which corresponds to how much outcomes differ from learned action values \\[1].\n",
+    "- The researchers looked into \"Reward Positivity\" (RewP), which corresponds to how much outcomes differ from learned action values.\n",
     "- They created the feedback-locked ERP (mean across epochs) for different task-cue-participant combinations. Then, they constructed difference waves between the mean win ERP and mean loss ERP across all participants for the task-cue combination.\n",
     "- They examined the data from the FCz electrode between 240–340 ms post feedback, based on the recommendations from previous research on reward prediction. The RewP was defined as the maximum voltage within this window for each task-cue-participant.\n",
     "\n",
     "\n",
     "### Some notes on using the dataset\n",
-    "- Although the paper says the data was sampled at 250 Hz, according to the dataset the sampling rate is 1000 Hz and we have proceeded assuming this 1kHz value.\n",
+    "- Although the paper says the data was sampled at 250 Hz, according to the dataset properties the sampling rate is 1000 Hz and we have proceeded assuming this 1kHz value.\n",
     "- The paper states that the 10-20 electrode montage was used.\n",
     "- Due to participants' wishes, only part of the data was shared by the researchers - that collected at the Oxford testing site. This means that we have fewer subjects to analyse, and also that the notch filtering required will be only at one frequency (50 Hz at Oxford).\n",
     "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing. We have also filled in these missing events and added them to this project folder as the file 'sub-XX_task-casinos_events_Restored.json'. \n",
-    "- Event name format: Each event name consists of four characters, with spaces used for padding (e.g. ```S  6, S 16```). However in some forms of output (e.g. in jupyter notebooks that we used while initially exploring the data) it can show up as three characters (```S 6, S 16```) and in the json file mentioned above the names are also slightly different (```S6, S16```). "
+    "- Event name format: Each event name consists of four characters, with spaces used for padding (e.g. ```S  6, S 16```). However in some forms of output (e.g. in jupyter notebooks that we used while initially exploring the data, or in the reports generated by the pipeline) it can show up as three characters (```S 6, S 16```); and in the json file mentioned above, the names are also slightly different (```S6, S16```). "
    ]
   },
   {
@@ -55,6 +57,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Our Analysis\n",
+    "\n",
     "### Authors' Pipeline vs. Our Pipeline - Overview\n",
     "\n",
     "Overall, we tried to replicate the pipeline of the authors as closely as possible. Some steps were performed differently, the notes on which are as below:\n",
@@ -67,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparison our results - Paper results\n",
+    "### Comparison: Paper results vs. Our results \n",
     "\n",
     "Below you can see how our analysis results in slightly different graphs than the ones presented in the original paper.\n",
     "\n",
@@ -94,7 +98,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### Visual Inspection of raw data to find bad channels/subjects\n",
+    "### Visual inspection of raw data to find bad channels/subjects\n",
     "\n",
     "As a first pass, we plotted the raw eeg and looked through the data visually. \n",
     "```\n",
@@ -178,9 +182,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Invalid Trials over Time\n",
+    "### Invalid Trials over Time\n",
     "\n",
-    "The complete experiment run for each subject is really long (**amount of time and number of breaks**). So it might be interesting to see the number of invalid trials for each participant over time. \n",
+    "The complete experiment run for each subject is really long, so it might be interesting to see the number of invalid trials for each participant over time. \n",
     "```\n",
     "import matplotlib.pyplot as plt\n",
     "# unpickle the invalid_trials dict: [subject, list of 0 and 1 for invalid or not in order of trials done]\n",
@@ -313,14 +317,10 @@
     "    bids_root = \"Dataset/ds004147-filtered\",\n",
     "    sub_list=[\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"],\n",
     "    cond_list=[ \n",
-    "        'Win LL',\n",
-    "        'Loss LL',\n",
-    "        'Win ML',\n",
-    "        'Loss ML',\n",
-    "        'Win MH',\n",
-    "        'Loss MH',\n",
-    "        'Win HH',\n",
-    "        'Loss HH'\n",
+    "    'Win LL - Loss LL',\n",
+    "    'Win ML - Loss ML',\n",
+    "    'Win MH - Loss MH',\n",
+    "    'Win HH - Loss HH'\n",
     "    ],\n",
     "    colors=['#EE82EE','#EE82EE','#a020f0','#a020f0'],\n",
     "    linestyles=['solid','dashed','dotted','dashdot']\n",
@@ -348,7 +348,7 @@
     "    \n",
     "![](./Report_Media/27icabeforeRB.PNG \"ICA sub27\")\n",
     "    \n",
-    "Through our practise with the website mentioned above and our own suspicions, we then proceeded to check if we agree with the pipelines decision. \n",
+    "Through our practise with the website mentioned above and our own understanding, we then proceeded to check if we agree with the pipeline's decision. \n",
     "In the case of subject 27, we for example thought that ICA001, ICA003 and ICA005 might contain some useful information and should be kept, while ICA004, ICA006, ICA007 and ICA008 are rather bad, so we updated the .tsv file, as mentioned above.\n",
     "    \n",
     "After we completed this process for all subjects, we ran the rest of the pipeline as explained below, which then generated a new report with the independent components we marked as \"bad\" and a new comparison between the uncleaned and cleaned signals, this time on a different epoch, as in our case the ICA is trained on other epochs than the ones it is applied to.\n",
@@ -362,17 +362,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Try it Yourself!\n",
+    "### Setup\n",
+    "\n",
+    "We used python 3.10 with mne-bids-pipeline v1.7.0, running on Windows and on Ubuntu Linux. The environment can be replicated using the requirements.txt file available in the project folder. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it Yourself!\n",
     "\n",
     "These are the steps to run the analysis from start to end:\n",
     "\n",
+    "0. If using jupyter notebooks to check things \"live\" like we did, this code can be run in the first cell:\n",
+    "\n",
+    "```\n",
+    "from utils import *   # to make all our utility functions available\n",
+    "%matplotlib qt        # magic command to make plotting work especially if you want to interactively inspect the raw data\n",
+    "```\n",
+    "            \n",
     "1. **Download the dataset and extract it** to a folder of your choice. For us, the main project folder was \"EEG2324Brownie\" and the dataset in the folder 'Dataset/ds004147' inside it.\n",
     "2. **Removing participants, invalid trials, and learning trials** from the dataset - run the functions drop_learning_nonlearner_invalid_trials and drop_trials_events from ```utils.py``` as explained above. This creates a new folder 'Dataset/ds004147-filtered/', which is the folder to use for the actual analysis.  \n",
-    "3. **Initialisation**: In the config file ```brownie-config.py```, set the values of parameters like study_name (main project folder - for us, 'EEG2324Brownie'), bids_root (should point to the new 'ds004147-filtered' folder), subjects (if you want to analyse only a few subjects vs. all), etc. (TODO check full list after cleaning up config file)\n",
+    "3. **Initialisation**: In the config file ```brownie-config.py```, set the values of parameters like study_name (main project folder - for us, 'EEG2324Brownie'), bids_root (should point to the new 'ds004147-filtered' folder), subjects (if you want to analyse only a few subjects vs. all), etc. \n",
     "4. **Filtering and ICA step**:\n",
     "    - Set ```ica_train_step = True``` in the configuration file\n",
     "    - Run the initial pipeline steps from the command line:\n",
-    "      ```mne_bids_pipeline --config=./brownie-config.py --steps=init,preprocessing/_01_data_quality,preprocessing/_04_frequency_filter,preprocessing/_06a1_fit_ica,preprocessing/_06a2_find_ica_artifacts ```\n",
+    "    ```mne_bids_pipeline --config=./brownie-config.py --steps=init,preprocessing/_01_data_quality,preprocessing/_04_frequency_filter,preprocessing/_06a1_fit_ica,preprocessing/_06a2_find_ica_artifacts ```\n",
     "    - The pipeline will create a new folder 'derivatives/mne_bids_pipeline' within the 'ds004147-filtered' folder (if it doesn't exist already) and store its outputs there. \n",
     "5. **ICA component inspection**: For each subject analysed, open the corresponding folder in the derivatives section and inspect the report at sub-XX_task-casinos_proc-ica+components_report.html. In sub-XX_task-casinos_proc-ica_components.tsv you can mark individual ICA components as 'bad' or 'good' depending on what the pipeline has auto-classified as well as from personal judgement, and then save this file to be used for the next step.\n",
     "6. **Continue with epoching and apply ICA**:\n",
@@ -391,7 +407,11 @@
    "source": [
     "### Further Analysis\n",
     "\n",
-    "As a further analysis, we build a linear model to understand the relationship between selected predictors and the RewP. Specifically, we want to understand how predictors from the papers, such as task-cue pair and performance, contribute to RewP and confirm (or not!) the results from the paper, but also understand how new self-selected predictors, such as response time and previous trial outcome, might affect RewP. "
+    "As a further analysis, we build a linear model to understand the relationship between selected predictors and the RewP. Specifically, we want to understand how predictors from the papers, such as task-cue pair and performance, contribute to RewP and confirm (or not!) the results from the paper, but also understand how new self-selected predictors, such as response time and previous trial outcome, might affect RewP. \n",
+    "\n",
+    "Our results contradict the paper, for example, the task-cue pair is not a significant predictor to explain the variance in RewP in our linear model, whereas it was in the paper. We performed a sanity check to see if the voltage values for a single condition matched the values retrieved by the mne_bids_pipeline. Unfortunately, the voltage values we retrieved differed, and we hypothesize that this also leads to the faulty linear model. \n",
+    "\n",
+    "More details on this can be found in the notebook \"linear_modeling.ipynb\"."
    ]
   },
   {
@@ -403,11 +423,7 @@
     }
    },
    "source": [
-    "#### Setup\n",
-    "\n",
-    "We used mne-bids-pipeline v1.7.0, running on Windows and on Ubuntu Linux. The environment can be replicated using the environment file available in the git of this project. \n",
-    "\n",
-    "#### References\n",
+    "### References\n",
     "\n",
     "Paper: https://doi.org/10.1016/j.neuroimage.2022.119456.\n",
     "\n",
