--- a/report.ipynb
+++ b/report.ipynb
@@ -411,7 +411,7 @@
     "\n",
     "Our results contradict the paper, for example, the task-cue pair is not a significant predictor to explain the variance in RewP in our linear model, whereas it was in the paper. We performed a sanity check to see if the voltage values for a single condition matched the values retrieved by the mne_bids_pipeline. Unfortunately, the voltage values we retrieved differed, and we hypothesize that this also leads to the faulty linear model. \n",
     "\n",
-    "More details on this can be found in the notebook \"linear_modeling.ipynb\"."
+    "More details on this can be found in the notebook ```linear_modeling.ipynb```."
    ]
   },
   {
