--- a/linear_modeling.ipynb
+++ b/linear_modeling.ipynb
@@ -91,8 +91,8 @@
     "\n",
     "To verify that our implementation correctly retrieves the epoch values and then correctly averages them across the specified task-cue pair, we plot the averaged epoch values for the high task and high cue on loss condition for Subject 27 and compare them to the pipeline's output on the same combination and subject.\n",
     "\n",
-    "![image](Report_Media/linearmodeling_SC.png \"Scatter plot retrieved from method retrieve_data() for sub-27, Loss HH\")\n",
-    "![image](Report_Media/linearmodeling_SC2.png \"Plot from mne_bids_pipeline report\")\n",
+    "![image](./Report_Media/linearmodeling_SC.png \"Scatter plot retrieved from method retrieve_data() for sub-27, Loss HH\")\n",
+    "![image](./Report_Media/linearmodeling_SC2.png \"Plot from mne_bids_pipeline report\")\n",
     "\n",
     "The mne_bids_pipeline plot shows all the channels. Since we are interested in FCz, the lavender color represents the lines around channel FCz.  In our scatter plot, the x-axis represents the indices starting from -200ms and representing 1ms each. Comparing the overall trend of the graph, it seems similar to the lavender graphs in the mne_bids_pipeline report, but unfortunately there is something wrong with the range of voltage values. Given our code, we did not catch any error in our retrieval of voltages from each epoch. Specifically, we retrieve the epochs from the mne.Epochs object and average all the epochs at their specific time steps for each condition in each subject. This leads us to conclude that the difference in voltages could lead to incorrect linear modeling, but for the sake of completeness, we proceeded with the erroneous data we retrieved.\n"
    ],
