--- a/report.ipynb
+++ b/report.ipynb
@@ -18,7 +18,7 @@
     "## The original paper explained in brief\n",
     "\n",
     "#### Experiment: \n",
-    "- Participants were presented with **slot machines** (\"trials\") where they had to select one of two arms to pull. If the participant selected the correct arm on the slot machine, they would **\"win\"** at the machine and gain $0.03, while if they selected the wrong arm, they would **\"lose\"** the trial i.e. gain $0.00.\n",
+    "- Participants were presented with **slot machines** (\"trials\") where they had to select one of two arms to pull. If the participant selected the correct arm on the slot machine, they would **\"win\"** at the machine and gain \\\\$0.03, while if they selected the wrong arm, they would **\"lose\"** the trial i.e. gain \\\\$0.00.\n",
     "- The **win/loss feedback** for each slot machine was shown to them after they selected an arm. Their goal was to **win as much money as possible**.\n",
     "- Each slot machine was preceded by a **cue** (coloured shape) shown to the participant. The slot machines were divided into three sets of **casinos** (\"tasks\") which were presented to participants in random order.\n",
     "- The different cues corresponded to **different types of slot machines**. Some machines, called **\"low-value\" machines**, had a 50% win probability on both arms, while others called **\"high-value machines\"** had an 80% win probability on one arm and 20% on the other.\n",
